# lynx4ai

./: .gitignore  .mcp.json  AGENTS.md  Cargo.toml  LICENSE  Makefile  README.md  install.sh
src/: error.rs  lib.rs  main.rs  server.rs  types.rs
src/auth/: form_fill.rs  mod.rs  op_cli.rs
src/browser/: config.rs  helpers.rs  instance.rs  mod.rs
src/snapshot/: compact.rs  diff.rs  mod.rs  refs.rs  tree.rs
